# forge-guardrails

./: .agent-config-mcp.json  .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.classifier  Makefile  README.md  SOUL.md  agent.yaml  eval-matrix.sh
.agents/skills/: .agent-config-skills.json
.codex/: .agent-config-mcp.json  config.toml  hooks.json
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh
docs/: BACKEND_SETUP.md  CLEANROOM.md  COMPRESSION.md  DATASET_WORKFLOW.md  EVAL_GUIDE.md  MODEL_TRAINING_SCHEMA.md  PARITY.md  PROXY_FLOW.md  SCHEMA.md  USER_GUIDE.md  WORKFLOW.md
model/: MODEL.md  README.md  local_eval_findings_2026-05-30.md  onnx_classifier_eval_comparison.md
notebook/: README.md  apply_patches.py  inspect_v4.py  inspect_v4b.py  python_oracle_colab_trace.jsonl  toolcall_verifier_training_colab_gpu_label_eval.ipynb  toolcall_verifier_training_production_colab_v2.ipynb  toolcall_verifier_training_production_colab_v4.ipynb  toolcall_verifier_training_production_colab_v5.ipynb
notebook/generatetd/: AGENTS.md  README.md  pyproject.toml
notebook/generatetd/generatetd/: __init__.py  cli.py  discover.py  env.py  models.py  parsers.py  pipeline.py  prompts.py  providers.py  sanitizer.py  schemas.py  serialization.py  validator.py
notebook/generatetd/tests/: test_cli.py  test_parsers.py  test_pipeline.py  test_providers.py  test_sanitizer.py
notebook/jsonl/: python_oracle_colab_trace.jsonl  rust_smoke.final_response_hard_negatives.jsonl  rust_smoke.tool_call_hard_negatives.jsonl
scripts/: compare_compression_eval.py  compare_published_eval.py  eval-matrix-class.sh  eval-matrix.sh  eval_openai_proxy.py  patch_notebook_v5.py  patch_notebook_v5b.py  patch_notebook_v5c.py  patch_notebook_v5d.py  patch_notebook_v5e.py  proxy_resource_baseline.py  publish_docker.sh  run_dataset_workflow.sh  run_local_eval.sh  start_llamaserver_proxy.sh  summarize_proxy_eval.py
scripts/eval_openai_proxy_lib/: __init__.py  client.py  main.py  models.py  runner.py
src/: AGENTS.md  README.md  classifier_download.rs  client.rs  compact.rs  context.rs  error.rs  handler.rs  hardware.rs  http_server.rs  inference.rs  lib.rs  nudges.rs  proxy.rs  respond.rs  runner.rs  sampling.rs  schema_compression.rs  secret_redaction.rs  server.rs  slot_worker.rs  streaming.rs  tool_output.rs  tool_policy.rs  tool_spec.rs  workflow.rs
src/backends/: mod.rs
src/classifier_download/: download.rs  files.rs  mod.rs  mod_impl.rs  paths.rs  tests.rs  types.rs
src/clients/: AGENTS.md  README.md  anyllm_proxy.rs  base.rs  mod.rs  openai_compat.rs  retry.rs  sampling.rs
src/context/: AGENTS.md  README.md  hardware.rs  manager.rs  mod.rs  strategies.rs
src/core/: AGENTS.md  README.md  inference.rs  message.rs  mod.rs  runner.rs  slot_worker.rs  steps.rs  tool_spec.rs  workflow.rs
src/guardrails/: AGENTS.md  README.md  classifier_artifact.rs  components.rs  error_tracker.rs  guardrails.rs  history.rs  mod.rs  nudge.rs  onnx_scorer.rs  policy.rs  response_validator.rs  scoring.rs  scoring_context.rs  step_enforcer.rs
src/prompts/: AGENTS.md  README.md  mod.rs  nudges.rs  parse_strategies.rs
src/proxy/: AGENTS.md  README.md  handler.rs  mod.rs  proxy.rs  request_http.rs  response.rs  server.rs
src/server/: AGENTS.md  README.md  args.rs  budget.rs  lifecycle.rs  manager.rs  runtime.rs  setup.rs  tests.rs
src/tool_output/: config.rs  lzw.rs  postcall.rs  repair.rs  safety.rs  tests.rs
src/tools/: AGENTS.md  README.md  mod.rs  respond.rs
tests/: anyllm_proxy_client_tests.rs  backend_streaming_tests.rs  classifier_tests.rs  client_tests.rs  compact_tests.rs  context_tests.rs  engine_tests.rs  error_tests.rs  guardrails_tests.rs  hardware_tests.rs  message_tests.rs  ollama_client_tests.rs  parity_tests.rs  prompts_tests.rs  sampling_tests.rs  secret_redaction_tests.rs  step_tracker_tests.rs  streaming_tests.rs  test_eval_openai_proxy.py  test_resource_baseline.py  workflow_tests.rs
(+98 files in other folders)
