[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generatetd"
version = "0.1.0"
description = "Generate Forge verifier training data from local Codex and Claude Code logs."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["generatetd*"]
